feat: 增加获取用户信息接口
