# server/api/repo.go
@@ -1,0 +1,57 @@
+package api
+
+import (
+	"encoding/json"
+	"fmt"
+	"net/http"
+	"shownote/config"
+	"shownote/model"
+	"shownote/model/response"
+	"shownote/utils"
+
+	"github.com/gin-gonic/gin"
+	"github.com/go-resty/resty/v2"
+)
+
+// @Summary 授权登录
+// @Description gitee auth login
+// @Param	repo	query	string	true	"仓库类型 gitee or github"
+// @Param	code	query	string	true	"{redirect_uri}?code=abc"
+// @Success 200 {string} string "{"success":true,"data":{},"msg":"创建成功"}"
+// @Router /auth/:repo [get]
+func AuthAction(c *gin.Context) {
+	code := c.Query("code")
+	repo := c.Param("repo")
+	// state := c.Query("state")
+	// func GetToken(code, clientId, redirectUri, clientSecret string) string
+	token, err := utils.GetToken(code, repo)
+	if err != nil {
+		c.Redirect(http.StatusMovedPermanently, config.AppConfig.WebConfig.ErrorUrl)
+	} else {
+		c.Redirect(http.StatusMovedPermanently, config.AppConfig.WebConfig.IndexUrl+"?token="+token.AccessToken)
+	}
+}
+
+// @Summary 获取用户信息
+// @Description 获取用户的基本信息
+// @Param	token	query	string	true	"accesstoken"
+// @Success 200 {string} string "{"success":true,"data":{},"msg":"创建成功"}"
+// @Router /user [get]
+func UserAction(c *gin.Context) {
+	token := c.Query("token")
+	if token == "" {
+		response.FailWithMessage("接口未授权", c)
+	}
+	client := resty.New()
+	resp, err := client.R().
+		SetQueryParam("access_token", token).
+		Get("https://gitee.com/api/v5/user")
+
+	if err != nil {
+		response.FailWithMessage("获取用户信息失败", c)
+	}
+	var userInfo model.User
+	json.Unmarshal(resp.Body(), &userInfo)
+	fmt.Println(userInfo)
+	response.OkWithData(userInfo, c)
+}
