# server/docs/swagger.json
@@ -6,24 +6,47 @@
         "contact": {},
         "version": "0.0.1"
     },
-    "host": "localhost:8000",
     "basePath": "/",
     "paths": {
-        "/auth/": {
+        "/auth/:repo": {
             "get": {
                 "description": "gitee auth login",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "gitee授权登录",
+                "summary": "授权登录",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "仓库类型 gitee or github",
+                        "name": "repo",
+                        "in": "query",
+                        "required": true
+                    },
                     {
                         "type": "string",
                         "description": "{redirect_uri}?code=abc",
                         "name": "code",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"success\":true,\"data\":{},\"msg\":\"创建成功\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/user": {
+            "get": {
+                "description": "获取用户的基本信息",
+                "summary": "获取用户信息",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "accesstoken",
+                        "name": "token",
                         "in": "query",
                         "required": true
                     }
