# server/router/router.go
@@ -9,6 +9,7 @@ import (
 func InitRouter() *gin.Engine {
 	router := gin.Default()
 	router.GET("/", api.LoginAction)
-	router.GET("/auth", api.AuthAction)
+	router.GET("/auth/:repo", api.AuthAction)
+	router.GET("/user", api.UserAction)
 	return router
 }
